Documented Container Replicator/Pod/Node/Image policies support

--- a/doc-Policies_and_Profiles_Guide/topics/Creating_a_Condition.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/Creating_a_Condition.adoc
@@ -5,9 +5,9 @@ test the condition.
 
 . Navigate to menu:Control[Explorer].
 
-. Click the *Conditions* accordion, and select either *Host Conditions* or *VM Conditions*.
+. Click the *Conditions* accordion, and select either *Host / Node Conditions* or *VM and Instance Conditions* or *Replicator Conditions* or *Pod* or *Node Conditions* or *Image Conditions*.
 
-. Click image:../images/1847.png[image] (*Configuration*), then image:../images/1862.png[image] (*Add a New Host Condition*) or image:../images/1862.png[image] (*Add a New VM Condition*).
+. Click image:../images/1847.png[image] (*Configuration*), then image:../images/1862.png[image] (*Add a New Host or VM or Replicator or Pod or Node or Image Condition*).
 
 . Enter a *Description* for the condition.
 +
