--- a/doc-Policies_and_Profiles_Guide/topics/Deleting_a_Policy.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/Deleting_a_Policy.adoc
@@ -6,6 +6,6 @@ You can remove policies that you no longer need. You can only remove policies th
 
 . Click the *Policies* accordion, and select the policy you want to remove.
 
-. Click image:../images/1847.png[image] (*Configuration*), image:../images/1861.png[image] (*Delete this Host/VM and Instance Policy*).
+. Click image:../images/1847.png[image] (*Configuration*), image:../images/1861.png[image] (*Delete this Host/VM and Instance/Replicator/Pod/Node/Image Policy*).
 
 . Click *OK* to confirm.
