--- a/doc-Policies_and_Profiles_Guide/topics/To_create_a_Control_Policy.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/To_create_a_Control_Policy.adoc
@@ -10,9 +10,9 @@ Also, a description of all events is provided in events.
 
 . Click the *Policies* accordion, and select *Control Policies*.
 
-. Select either *Host Control Policies* or *VM Control Policies*.
+. Select either *Host Control Policies* or *VM Control Policies* or *Replicator Control Policies* or *Pod Control Policies* or *Container Node Control Policies* or *Container Image Control Policies*.
 
-. Click image:../images/1847.png[image] (*Configuration*), image:../images/1862.png[image] (*Add New Host/VM Control Policy*).
+. Click image:../images/1847.png[image] (*Configuration*), image:../images/1862.png[image] (*Add a New Host / VM / Replicator / Pod / Node / Image Control Policy*).
 
 . Type in a *Description*.
 +
