--- a/doc-Policies_and_Profiles_Guide/topics/To_schedule_a_Compliance_check.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/To_schedule_a_Compliance_check.adoc
@@ -10,6 +10,7 @@ include::steps_schedule-compliance-check.adoc[]
 image:../images/1939.png[image]
 * If you choose *Host Compliance Check*, you are presented with *Host Selection* where you can choose to analyze all hosts, all hosts for a specific provider, all hosts for a cluster, a single host, or you can select hosts using a global filter.
 +
+* If you choose *Container Image Compliance Check*, you are presented with *Image Selection* where you can choose to analyze all images, all images for a specific provider, or a single image.
 
 [NOTE]
 ======
