--- a/doc-Policies_and_Profiles_Guide/topics/chap_events.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/chap_events.adoc
@@ -8,6 +8,8 @@ Events are triggers that cause a condition to be tested. Control provides severa
 |Category |Description
 |Datastore Operation |Events related to datastore analysis.
 
+|Container Operation |Events related to container analysis.
+
 |Authentication Validation |Events related to credential validation for
 hosts and providers.
 
@@ -43,6 +45,73 @@ checking of a condition.
 [cols=",",options="header",]
 |=======================================================================
 |Event |Description
+|Container Image Analysis Complete |Check the condition when an image
+analysis of a container completes.
+
+|Container Image Discovered |
+
+|Container Image Compliance Check |
+
+|Container Image Compliance Passed |
+
+|Container Image Compliance Failed |
+
+|Container Node Failed Mount |
+
+|Container Node Invalid Disk Capacity |
+
+|Container Node Not Ready |
+
+|Container Node Not Schedulable |
+
+|Container Node Ready |
+
+|Container Node Schedulable |
+
+|Container Node Rebooted |
+
+|Container Node Compliance Check |
+
+|Container Node Compliance Passed |
+
+|Container Node Compliance Failed |
+
+|Pod Deadline Exceeded |
+
+|Pod Failed Scheduling |
+
+|Pod Failed Sync |
+
+|Pod Failed Validation |
+
+|Pod hostPort Conflict |
+
+|Pod Insufficient Free CPU |
+
+|Pod Insufficient Free Memory |
+
+|Pod nodeSelector Mismatching |
+
+|Pod Out of Disk |
+
+|Pod Scheduled |
+
+|Pod Compliance Check |
+
+|Pod Compliance Passed |
+
+|Pod Compliance Failed |
+
+|Replicator Failed Creating Pod |
+
+|Replicator Successfully Created Pod |
+
+|Replicator Compliance Check |
+
+|Replicator Compliance Passed |
+
+|Replicator Compliance Failed |
+
 |Datastore Analysis Complete |Check the condition when a SmartState
 Analysis of datastore completes.
 
