--- a/doc-Policies_and_Profiles_Guide/topics/chap_policies.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/chap_policies.adoc
@@ -51,10 +51,10 @@ Compliance policies are specifically designed to secure your environment
 by checking conditions that you create. These conditions can include the
 same conditions that you would use in a control policy, and most of the
 procedures are the same. However, a compliance policy automatically
-assigns the mark as a compliant action when the virtual machine or host
+assigns the mark as a compliant action when the entity type (virtual machine or host, for example) to which the policy applies
 passes all of the conditions. If any of the conditions are not met, then
 the virtual machine or host is marked as non-compliant. The compliance
-status is shown in the summary screen for the virtual machine or host
+status is shown in the summary screen for the entity type
 and on the compare and drift screens.
 
 include::To_create_a_compliance_Policy.adoc[]
@@ -83,5 +83,13 @@ include::To_schedule_a_Compliance_check.adoc[]
 include::To_check_a_Virtual_Machine_for_Compliance_from_the_Summary_Screen.adoc[]
 
 include::To_check_a_Host_for_Compliance_from_the_Summary_Screen.adoc[]
+
+include::To_check_a_Replicator_for_Compliance_from_the_Summary_Screen.adoc[]
+
+include::To_check_a_Pod_for_Compliance_from_the_Summary_Screen.adoc[]
+
+include::To_check_a_Container_Node_for_Compliance_from_the_Summary_Screen.adoc[]
+
+include::To_check_a_Container_Image_for_Compliance_from_the_Summary_Screen.adoc[]
 
 
