--- a/doc-Policies_and_Profiles_Guide/topics/To_check_a_Virtual_Machine_for_Compliance_from_the_Summary_Screen.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/To_check_a_Virtual_Machine_for_Compliance_from_the_Summary_Screen.adoc
@@ -1,12 +1,12 @@
 ===== Checking a Virtual Machine for Compliance from the Summary Screen
 
-. Navigate to menu:Compute[Infrastructure > Virtual Machines], click the virtual machine you want to check for compliance.
+. Navigate to menu:Compute[Infrastructure > Virtual Machines], select the virtual machine you want to check for compliance.
 
 . Click image:../images/1941.png[image] (*Policy*), and then image:../images/1942.png[image] (*Check Compliance of Last Known Configuration*).
 
 . A confirmation message appears. Click *OK*.
 
-. If it says *Available* next to *History*, you can click it to view the compliance history.
+. To view the compliance history, click on the virtual machine. Under *Compliance*, if *History* is *Available*, click on it to see its compliance history.
 +
 image:../images/1943.png[image]
 +
