--- a/doc-Policies_and_Profiles_Guide/topics/To_create_a_compliance_Policy.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/To_create_a_compliance_Policy.adoc
@@ -1,6 +1,6 @@
 ==== Creating a Compliance Policy
 
-Create compliance policies by assigning or creating a condition. {product-title} automatically assigns the events and actions to the compliance policy as opposed to a control policy where you must define this yourself. The VM or host compliance check event is
+Create compliance policies by assigning or creating a condition. {product-title} automatically assigns the events and actions to the compliance policy as opposed to a control policy where you must define this yourself. The entity type (VM or host, for example) compliance check event is
 assigned to the compliance policy. A compliance policy runs the mark as compliant action when the virtual machine or host passes all of the conditions. If any of the conditions are not met, then the virtual machine or host is marked as non-compliant.
 
 ifdef::cfme[If you do not know how to create a condition, see link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.1/policies-and-profiles-guide/#Creating_a_new_Policy_Condition[Creating a new Policy Condition].]
