--- a/doc-Policies_and_Profiles_Guide/topics/chap_policy_profiles.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/chap_policy_profiles.adoc
@@ -1,7 +1,7 @@
 //Policy Profiles
 //---------------
 
-Policy profiles are groups of policies that you can assign wholesale to virtual machines, providers, clusters, hosts, and resource pools. Policy profiles provide a framework for easily managing and assigning different levels of security, across various types of cloud resources.
+Policy profiles are groups of policies that you can assign wholesale to virtual machines, providers, clusters, hosts, resource pools, replicators, pods, container nodes, and container images. Policy profiles provide a framework for easily managing and assigning different levels of security, across various types of cloud resources.
 
 include::Note_OpenSCAP_XREF.adoc[]
 
@@ -23,17 +23,15 @@ include::To_simulate_Policy_Profiles_on_Virtual_Machines.adoc[]
 After creating your policy profiles, you are ready to evaluate and
 assign them. 
 
-* Assign a policy profile to a virtual machine to apply the policy
-profile to a specific virtual machine, independent of its related host,
-provider, or repository.
-* Assign a policy profile to a provider to apply the policy profile to
-all virtual machines or hosts registered to that provider.
-* Assign a policy profile to a cluster to apply the policy profile to
-all virtual machines or hosts assigned to that cluster.
-* Assign a VM policy profile to a host to apply the policy profile to
-that specific host or all virtual machines registered to that Host.
-* Assign a VM policy profile to a resource pool to apply the policy
-profile to all virtual machines or hosts assigned to that resource pool.
+* Assign a policy profile to a virtual machine to apply the policy profile to a specific virtual machine, independent of its related host, provider, or repository.
+* Assign a policy profile to a provider to apply the policy profile to all virtual machines, hosts, replicators, pods, container nodes or container images registered to that provider.
+* Assign a policy profile to a replicator to apply the policy profile to that specific replicator.
+* Assign a policy profile to a pod to apply the policy profile to that specific pod.
+* Assign a policy profile to a container node to apply the policy profile to that specific node.
+* Assign a policy profile to a container image to apply the policy profile to that specific image.
+* Assign a policy profile to a cluster to apply the policy profile to all virtual machines or hosts assigned to that cluster.
+* Assign a VM policy profile to a host to apply the policy profile to that specific host or all virtual machines registered to that host.
+* Assign a VM policy profile to a resource pool to apply the policy profile to all virtual machines or hosts assigned to that resource pool.
 
 include::To_assign_policies_to_a_Management_System.adoc[]
 
@@ -62,6 +60,26 @@ include::Removing_Policy_Profiles_from_a_Cloud_Provider.adoc[]
 include::Assigning_Policy_Profiles_to_a_Network_Provider.adoc[]
 
 include::Removing_Policy_Profiles_from_a_Network_Provider.adoc[]
+
+include::Assigning_Policy_Profiles_to_a_Container_Provider.adoc[]
+
+include::Removing_Policy_Profiles_from_a_Container_Provider.adoc[]
+
+include::Assigning_Policy_Profiles_to_a_Replicator.adoc[]
+
+include::Removing_Policy_Profiles_from_a_Replicator.adoc[]
+
+include::Assigning_Policy_Profiles_to_a_Pod.adoc[]
+
+include::Removing_Policy_Profiles_from_a_Pod.adoc[]
+
+include::Assigning_Policy_Profiles_to_a_Container_Node.adoc[]
+
+include::Removing_Policy_Profiles_from_a_Container_Node.adoc[]
+
+include::Assigning_Policy_Profiles_to_a_Container_Image.adoc[]
+
+include::Removing_Policy_Profiles_from_a_Container_Image.adoc[]
 
 include::Assigning_Policy_Profiles_to_an_Instance.adoc[]
 
