Updated the container operation events in the events table.

--- a/doc-Policies_and_Profiles_Guide/topics/chap_events.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/chap_events.adoc
@@ -6,9 +6,9 @@ Events are triggers that cause a condition to be tested. Control provides severa
 [cols=",",options="header",]
 |=======================================================================
 |Category |Description
-|Datastore Operation |Events related to datastore analysis.
-
 |Container Operation |Events related to container analysis.
+
+|Datastore Operation |Events related to datastore analysis.
 
 |Authentication Validation |Events related to credential validation for
 hosts and providers.
@@ -45,72 +45,71 @@ checking of a condition.
 [cols=",",options="header",]
 |=======================================================================
 |Event |Description
-|Container Image Analysis Complete |Check the condition when an image
-analysis of a container completes.
+|Container Image Analysis Complete |Check the condition when an image analysis of a container completes.
 
-|Container Image Discovered |
+|Container Image Discovered |Check the condition when a container image is discovered.
 
-|Container Image Compliance Check |
+|Container Image Compliance Check |Check the condition when a compliance check is performed on an image.
 
-|Container Image Compliance Passed |
+|Container Image Compliance Passed |Check the condition when an image passes a compliance check.
 
-|Container Image Compliance Failed |
+|Container Image Compliance Failed |Check the condition when an image fails a compliance check.
 
-|Container Node Failed Mount |
+|Container Node Failed Mount |Check the condition when a node mount fails.
 
-|Container Node Invalid Disk Capacity |
+|Container Node Invalid Disk Capacity |Check the condition when a node's disk capacity is invalid.
 
-|Container Node Not Ready |
+|Container Node Not Ready |Check the condition when a node is not ready.
 
-|Container Node Not Schedulable |
+|Container Node Not Schedulable |Check the condition when a node is not schedulable.
 
-|Container Node Ready |
+|Container Node Ready |Check the condition when a node is ready.
 
-|Container Node Schedulable |
+|Container Node Schedulable |Check the condition when a node is schedulable.
 
-|Container Node Rebooted |
+|Container Node Rebooted |Check the condition when a node reboots.
 
-|Container Node Compliance Check |
+|Container Node Compliance Check |Check the condition when a compliance check is performed on a node.
 
-|Container Node Compliance Passed |
+|Container Node Compliance Passed |Check the condition when a node passes a compliance check.
 
-|Container Node Compliance Failed |
+|Container Node Compliance Failed |Check the condition when a node fails a compliance check.
 
-|Pod Deadline Exceeded |
+|Pod Deadline Exceeded |Check the condition when a pod deadline exceeds.
 
-|Pod Failed Scheduling |
+|Pod Failed Scheduling |Check the condition when a pod scheduling fails.
 
-|Pod Failed Sync |
+|Pod Failed Sync |Check the condition when a sync performed on a pod fails.
 
-|Pod Failed Validation |
+|Pod Failed Validation |Check the condition when a pod validation fails.
 
-|Pod hostPort Conflict |
+|Pod hostPort Conflict |Check the condition when a pod hostPort conflict occurs.
 
-|Pod Insufficient Free CPU |
+|Pod Insufficient Free CPU |Check the condition when there is an insufficient free CPU in a pod.
 
-|Pod Insufficient Free Memory |
+|Pod Insufficient Free Memory |Check the condition when there is an insufficient free memory in a pod.
 
-|Pod nodeSelector Mismatching |
+|Pod nodeSelector Mismatching |Check the condition when a pod nodeSelector mismatches.
 
-|Pod Out of Disk |
+|Pod Out of Disk |Check the condition when a pod is out of disk node.
 
-|Pod Scheduled |
+|Pod Scheduled |Check the condition when a pod is scheduled onto the host.
 
-|Pod Compliance Check |
+|Pod Compliance Check |Check the condition when a compliance check is performed on a pod.
 
-|Pod Compliance Passed |
+|Pod Compliance Passed |Check the condition when a pod passes a compliance check.
 
-|Pod Compliance Failed |
+|Pod Compliance Failed |Check the condition when a pod fails a compliance check.
 
-|Replicator Failed Creating Pod |
+|Replicator Failed Creating Pod |Check the condition when a replicator fails creating pod.
 
-|Replicator Successfully Created Pod |
+|Replicator Successfully Created Pod |Check the condition when a replicator successfully creates pod.
 
-|Replicator Compliance Check |
+|Replicator Compliance Check |Check the condition when a compliance check is performed on a replicator.
 
-|Replicator Compliance Passed |
+|Replicator Compliance Passed |Check the condition when a replicator passes a compliance check.
 
-|Replicator Compliance Failed |
+|Replicator Compliance Failed |Check the condition when a replicator fails a compliance check.
 
 |Datastore Analysis Complete |Check the condition when a SmartState
 Analysis of datastore completes.
