Incorporated peer review edits

--- a/doc-Policies_and_Profiles_Guide/topics/steps_schedule-compliance-check.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/steps_schedule-compliance-check.adoc
@@ -1,6 +1,6 @@
 . Navigate to menu:Settings[Configuration].
 
-. Click the *Settings* accordion, select *Schedules*.
+. Click the *Settings* accordion, and select *Schedules*.
 
 . Click image:../images/1847.png[image] (*Configuration*),
 image:../images/1862.png[image] (*Add a new Schedule*).
