--- a/doc-Policies_and_Profiles_Guide/topics/Assigning_Policy_Profiles_to_a_Pod.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/Assigning_Policy_Profiles_to_a_Pod.adoc
@@ -1,6 +1,6 @@
 ==== Assigning Policy Profiles to a Pod
 
-. Navigate to menu:Compute[Containers > Pods] and select the provider you need to assign the policy profiles to.
+. Navigate to menu:Compute[Containers > Pods] and select the pod you need to assign the policy profiles to.
 
 . Click image:../images/1941.png[image] (*Policy*), and then click image:../images/1851.png[image](*Manage Policies*).
 
