--- a/doc-Policies_and_Profiles_Guide/topics/Creating_a_Condition.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/Creating_a_Condition.adoc
@@ -7,7 +7,7 @@ test the condition.
 
 . Click the *Conditions* accordion, and select either *Host / Node Conditions* or *VM and Instance Conditions* or *Replicator Conditions* or *Pod* or *Node Conditions* or *Image Conditions*.
 
-. Click image:../images/1847.png[image] (*Configuration*), then image:../images/1862.png[image] (*Add a New Host or VM or Replicator or Pod or Node or Image Condition*).
+. Click image:../images/1847.png[image] (*Configuration*), then image:../images/1862.png[image] (*Add a New Host / VM / Replicator / Pod / Node / Image Condition*).
 
 . Enter a *Description* for the condition.
 +
