--- a/doc-Policies_and_Profiles_Guide/topics/chap_events.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/chap_events.adoc
@@ -101,7 +101,7 @@ checking of a condition.
 
 |Pod Compliance Failed |Check the condition when a pod fails a compliance check.
 
-|Replicator Failed Creating Pod |Check the condition when a replicator fails creating pod.
+|Replicator Failed Creating Pod |Check the condition when a replicator fails creating a pod.
 
 |Replicator Successfully Created Pod |Check the condition when a replicator successfully creates pod.
 
