--- a/doc-Policies_and_Profiles_Guide/topics/chap_events.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/chap_events.adoc
@@ -103,7 +103,7 @@ checking of a condition.
 
 |Replicator Failed Creating Pod |Check the condition when a replicator fails creating a pod.
 
-|Replicator Successfully Created Pod |Check the condition when a replicator successfully creates pod.
+|Replicator Successfully Created Pod |Check the condition when a replicator successfully creates a pod.
 
 |Replicator Compliance Check |Check the condition when a compliance check is performed on a replicator.
 
