--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -812,7 +812,7 @@ To change an authentication setting:
 . Click the zone where the server is located.
 . Click on the server.
 . Click on the *Authentication* tab.
-. Make any required changes. If you select `LDAP`, `LDAPS`, or `Amazon` as the authentication mode, click Validate to confirm your settings in the *Role Settings* area.
+. Make any required changes. If you select `LDAP`, `LDAPS`, or `Amazon` as the authentication mode, click *Validate* to confirm your settings in the *Role Settings* area.
 . Click *Save*.
 
 ====== Authentication Settings
@@ -821,38 +821,84 @@ image:2067.png[]
 
 * Use *Session Timeout* to set the period of inactivity before a user is logged out of the console.
 * Use *Mode* to set the type of authentication. Choose from *Database* (using the VMDB), *LDAP* (Lightweight Directory Authentication Protocol), *LDAPS* (Secure Lightweight Directory Authentication Protocol), or *Amazon*. The default is *Database*.
-If you choose *Database*, see xref:creating_a_user[] to create users. See xref:ldap_settings[] for more information on configuration for LDAP and LDAPS. If you choose Amazon, see xref:amazon_settings[].
+** If you choose *Database*, see xref:creating_a_user[] to create users. 
+** If you choose *LDAP* or *LDAPS*, see xref:ldap_settings[] for more information on configuration. 
+** If you choose *Amazon*, see xref:amazon_settings[].
 
 [[ldap_settings]]
-====== LDAP Settings
+====== Configuring LDAP Authentication
 
-If you choose LDAP or LDAPS as your authentication mode, required parameters are exposed under *LDAP Settings*. Be sure to validate your setting before saving them.
+If you choose LDAP or LDAPS as your authentication mode, the required parameters are exposed under *LDAP Settings*. Be sure to validate your settings before saving them.
 
+To configure {product-title} to use LDAP for authentication, complete the following steps:
+
+. Navigate to menu:Settings[Configuration]. Select the *Authentication* tab.
+. Select a *Session Timeout* to set the period of inactivity before a user is logged out of the console.
+. Select *LDAP* or *LDAPS* from the *Mode* list. This exposes additional required parameters under *LDAP Settings*.
+. Configure your *LDAP Settings*:
+* Use *LDAP Host Names* to specify the fully qualified domain names of your LDAP servers. {product-title} will search each host name in order until it finds one that authenticates the user.
+* Use *LDAP Port* to specify the port for your LDAP server. The default is 389 for LDAP and 636 for LDAPS.
+* From the *User Type* list, select one of the following: [NOTE: NEED DETAILS ON WHAT THESE USER TYPES DO AND HOW EXACTLY TO CONFIGURE. IS THIS FOR WHEN YOU LOG IN?]
+** Select *User Principal Name* to type the user name in the format of user@domainname. 
+** Select *Email Address* to login with the user's email address.
+** Select *Distinguished Name* (CN=<user>) or *Distinguished Name* (UID=<user>) to use just the user name, but be sure to enter the proper *User Suffix* for either one [NOTE: WHAT'S THE PROPER SUFFIX?]. Choose the correct *Distinguished Name* option for your directory service implementation.
+** Select *SAM Account Name* to  NEEDINFO ????
+* Specify the *User Suffix*, such as acme.com for *User Principal Name* or cn=users,dc=acme,dc=com for *Distinguished Name*, in *Base DN*.
++
 image:2068.png[]
 
-* Use *LDAP Host Name* to specify the fully qualified domain names of your LDAP servers. {product-title} will search each host name in order until it finds one that authenticates the user.
-* Use *LDAP Port* to specify the port for your LDAP server. The default is 389 for LDAP and 636 for LDAPS.
-* From the *User Type* list, select *User Principal Name* to type the user name in the format of user@domainname. Select *Email Address* to login with the users email address.
-Select *Distinguished Name* (CN=<user>) or *Distinguished Name* (UID=<user>) to use just the user name, but be sure to enter the proper *User Suffix* for either one. Choose the correct *Distinguished Name* option for your directory service implementation.
-* Specify the *User Suffix*, such as acme.com for *User Principal Name* or cn=users,dc=acme,dc=com for *Distinguished Name*, in *Base DN*.
+. Configure your *Role Settings*:
+If you choose LDAP or LDAPS, you can use groups from your directory service to set the role for the authenticated LDAP user. The LDAP user must be in one of the Account Role Groups. See xref:ldap_groups[] for more information.
+* Check *Get User Groups from LDAP* to *[QUESTION: What does this set?]*. ADD IMPORTANT HERE
++
+[NOTE]
+======
+If you do not check *Get User Groups from LDAP*, the user must be defined in the VMDB using the console where the User ID is the same as the user's name in your directory service typed in lowercase.
 
-====== LDAP Role Settings
-
-If you choose LDAP, you can use groups from your directory service to set the role for the authenticated LDAP User. The LDAP user must be in one of the Account Role Groups. See xref:ldap_groups[] for more information.
-
-If you do not check Get User Groups from LDAP, the user must be defined in the VMDB using the console where the User ID is the same as the user's name in your directory service typed in lowercase.
 For example, dbright@acme.com when using User Principal Name, cn=dan bright,ou=users,dc=acme,dc=com when using Distinguished Name (CN=<user>), or uid=dan bright,ou=users,dc=acme,dc=com when using Distinguished Name (UID=<user>).
 Then, when logging in, the user would type either dbright (User Principal Name) or dan bright (Distinguished Name). If the user is not defined in the VMDB, they will be denied access to {product-title}.
-
-image:2069.png[]
-
-* Check *Get Roles from Home Forest* to use the LDAP roles from the LDAP users home forest.
-* Check *Follow Referrals* to lookup and bind a user that exists in a domain other than the one configured in the LDAP authentication settings.
+======
++
+* Check *Get Roles from Home Forest* to use the LDAP roles from the LDAP user's home forest.
+* Check *Follow Referrals* to look up and bind a user that exists in a domain other than the one configured in the LDAP authentication settings.
 * Use *Base DN* to set the place in the directory tree from which you want to start searching for users.
 * Specify the user name to bind to the LDAP server in *Bind DN*. This user must have read access to all users and groups that will be used for {product-title} authentication and role assignment.
 * Specify the password for the Bind DN user in *Bind Password*.
++
+image:2069.png[]
 
-Click *Validate* to verify your settings.
+. Click *Validate* to verify your settings.
+
+====== Trusted Forests
+
+If a user has group memberships in another LDAP Forest, specify the settings to access the memberships in the trusted forest.
+
+When trusted forests are added to the authentication configuration, they are used only for finding groups that a user is a member of. {product-title} will first collect all of the user's groups from the primary LDAP directory. Then it will collect any additional groups that the user is a member of from all of the configured forests.
+
+The collected LDAP groups are used to match, by name, against the groups defined in {product-title}. The user must be a member of at least one matching LDAP group to be successfully authenticated.
+
+To add settings for a trusted forest:
+
+. Navigate to menu:Settings[Configuration].
+. Click on the *Settings* accordion, then click *Zones*.
+. Click the *Zone* where the Server is located.
+. Click on the *Server*.
+. Click *Authentication*.
+. Check *Get Role* from *LDAP*, and enter all items in the *Role Settings Area*.
+. In the *Trusted Forest Settings* area, click image:1848.png[](*Click to add a new forest*).
+. Enter the *LDAP Host Name*, select a *Mode*, and enter an *LDAP Port*, *Base DN*, *Bind DN*, and *Bind Password*.
+(NOTE:need more details on what to configure)
+. Click *Save*.
+
+LDAP authentication has now been configured in your CloudForms environment.
+
+
+// Break this procedure here, or contain in the same section?
+
+[NOTE]
+============
+To assign account roles using LDAP groups, see xref:ldap_groups[].
+============
 
 [[amazon_settings]]
 ====== Amazon Settings
@@ -865,27 +911,6 @@ If you choose Amazon as your authentication mode, required parameters are expose
 Users logging into {product-title} with Amazon authentication enter their own IAM Access Key as the username and IAM Secret Key as the password.
 Amazon users must be added as a {product-title} user or belong to an IAM user group added to the list of {product-title} groups.
 
-====== Trusted Forests
-
-If a user has group memberships in another LDAP Forest, then specify the settings to access the memberships in the trusted forest.
-
-When trusted forests are added to the authentication configuration, they are used only for finding groups that a user is a member of. {product-title} will first collect all of the user's groups from the primary LDAP directory. Then it will collect any additional groups that the user is a member of from all of the configured forests.
-
-The collected LDAP groups are used to match, by name, against the groups defined in {product-title}. The user must be a member of at least one matching LDAP group to be successfully authenticated.
-
-====== Adding Settings for a Trusted Forest
-
-To add settings for a trusted forest:
-
-. Navigate to menu:Settings[Configuration].
-. Click on the *Settings* accordion, then click *Zones*.
-. Click the *Zone* where the Server is located.
-. Click on the *Server*.
-. Click *Authentication*.
-. Check *Get Role* from *LDAP*, and enter all items in the *Role Settings Area*.
-. In the *Trusted Forest Settings* area, click image:1848.png[](*Click to add a new forest*).
-. Enter the *LDAP Host Name*, select a *Mode*, and enter an *LDAP Port*, *Base DN*, *Bind DN*, and *Bind Password*.
-. Click *Save*.
 
 ====== External Authentication (httpd)
 
@@ -1758,23 +1783,51 @@ image:2088.png[]
 . Check the boxes for the folders that you want to limit this user to. The items that have changed will show in blue italicized font.
 . Click *Add*.
 
-[[ldap_groups]]
-==== LDAP Groups
 
-When leveraging your LDAP groups, if you are using LDAP and the LDAP user is not a member of any of the defined groups, then the user will be denied access to {product-title}.
+[[ldap_groups]]
+==== Assigning Account Roles Using LDAP Groups
+
+After configuring LDAP authentication as described in xref:ldap_settings[], you can assign account roles. You can either create groups that match your pre-existing LDAP groups by name, or add {product-title} default groups to the LDAP (FOREST/NETWORK?) you are connecting to.
+
+When leveraging your LDAP groups, if you are using LDAP and the LDAP user is not a member of any of the defined groups, then the user will be denied access to {product-title}. *CLARIFY*
+
 There are two ways to use LDAP groups with {product-title}:
 
-* Create groups with a specific set of names as provided by {product-title}. These groups automatically get assigned to a specific role.
 * Assign pre-existing groups from your LDAP server to {product-title} account roles.
+* Create groups with a specific set of names as provided by {product-title}. These groups automatically get assigned to a specific role.
 
 
-==== Using {product-title}s Named Groups to Assign Account Roles
+===== Using Pre-Existing LDAP Groups to Assign Account Roles
+
+. Navigate to menu:Settings[Configuration].
+. Click on the *Access Control* accordion, then click *Groups*.
+. Click image:1847.png[] (*Configuration*), and image:plus_green.png[] (*Add a new Group*) to create a group.
+. Enter a description for the group in the *Description* field.
+. There are two ways to specify the group to use:
+* Type in the *cn* for the group in *LDAP Group*. This group must be in the LDAP directory source you specified under [LINK Operations-Server].
++
+image:2090.png[]
++
+* Select *Look Up LDAP Groups* to find a list of groups, then use the dropdown list that appears in the *LDAP Group Information* area to choose a group.
+. Select a *Role* to map to the group.
+. Select a *Project/Tenant* to map to the group.
+. Select any filters to apply to what this group can view in the *Assign Filters* area:
+.. In the *My Company Tags* tab, select tags to limit the user to items containing those tags. The items that have changed show in a blue italicized font.
+.. In the *Host & Clusters* tab, select the host and clusters to limit the user to. The items that have changed show in a blue italicized font.
+image:2093.png[]
+.. In the *VMs & Templates* tab, select the folders created in your virtual infrastructure to limit the user to. The items that have changed show in a blue italicized font.
+. Click *Add*.
+
+To configure the LDAP group lookup priority, see xref:ldap_lookup_priority[].
+
+
+===== Using Groups Named by {product-title} to Assign Account Roles
 
 In your directory service, define a distribution group for each of the account roles with the names shown in the table below.
 This group must be in the LDAP directory source you specified for the server. See xref:ldap_settings[].
 
 
-==== Account Role and Directory Service Group Names
+.Account Role and Directory Service Group Names
 
 [width="100%",cols="50%,50%",options="header",]
 |=======================================================================
@@ -1796,31 +1849,30 @@ This group must be in the LDAP directory source you specified for the server. Se
 |=======================================================================
 
 . Make each user of your directory service that you want to have access to {product-title} a member of one of these groups.
-. Navigate to menu:Settings[Configuration], then click on the *Settings* accordion, then *Zones*, then the *Authentication* tab, you can enable *Get User Groups from LDAP* after typing in all of the required settings. See xref:ldap_settings[].
+. Navigate to menu:Settings[Configuration].
+. Click the *Settings* accordion, then select your server under *Zones*.
+. Click the *Authentication* tab and enable *Get User Groups from LDAP* after typing in all of the required settings. See xref:ldap_settings[]. (DOES THIS MAKE SENSE?)?????
 
-==== Using Pre-existing LDAP Groups to Assign Account Roles
+[[ldap_lookup_priority]]
+==== Configuring Lookup Priority for LDAP Groups
 
-To use pre-existing LDAP groups to assign account roles:
+{product-title} can have multiple LDAP groups configured, which the appliance (?) will attempt to authenticate with one by one until it succeeds. However, the lookup priority of these groups can be arranged as desired. To configure the order in which {product-title} looks up LDAP groups:
 
 . Navigate to menu:Settings[Configuration].
 . Click on the *Access Control* accordion, then click *Groups*.
-. Click image:1847.png[] (*Configuration*), and image:plus_green.png[] (*Add a new Group*) to create a group.
-. Enter a description for the group in the *Description* field.
-. There are two ways to specify the group to use:
-* Type in the *cn* for the group in *LDAP Group*. This group must be in the LDAP directory source you specified under Operations-Server.
-+
-image:2090.png[]
-+
-* Select *Look Up LDAP Groups* to find a list of groups, then use the drop down list that appears in the *LDAP Group Information* area to choose a group.
-. Select a *Role* to map to the group.
-. Select any *filters* to apply to what this group can view in the *Assign Filters* area:
-.. Select the filters to apply to the user. The items that have changed show in a bold, blue font.
-.. Click the *Host & Clusters* tab.
-.. Select the host and clusters to limit the user to. The items that have changed show in a bold, blue font.
-image:2093.png[]
-.. Click the *VMs & Templates* tab. This shows folders that you have created in your virtual infrastructure.
-.. Select the folders to limit the user to. The items that have changed show in a bold, blue font.
-. Click *Add*.
+. Click image:1847.png[] (*Configuration*), and image:plus_green.png[] (*Edit Sequence of User Groups for LDAP Look Up*) to prioritize which group a user will default to if LDAP returns multiple matching groups.
+. Select one or more consecutive groups and use the arrow buttons to move the user group higher or lower in priority.
+. Click *Save*. 
+
+
+To test your configuration:
+
+. Log out of the {product-title} user interface.
+. Log back in as an LDAP user that is assigned to one or more of the matching groups.
+. Change groups by clicking on the user pull down on the top right of the screen. There should be a dropdown list of the groups the user is authorized for. 
+
+//INSERT SCREENSHOT OF DROPDOWN!
+
 
 [[roles]]
 ==== Roles
