--- a/doc-Deployment_Planning_Guide/topics/introduction.adoc
+++ b/doc-Deployment_Planning_Guide/topics/introduction.adoc
@@ -139,6 +139,7 @@ Virtual Thumbnail:: An image in the web interface representing a resource, such 
 Zones:: {product-title} Infrastructure can be organized into zones to configure failover and to isolate traffic. Zones can be created based on your environment.
 Zones can be based on geographic location, network location, or function. When first started, new servers are put into the default zone.
 
+ifdef::cfme[]
 === Getting Help and Giving Feedback
 
 If you experience difficulty with a procedure described in this documentation, visit the Red Hat Customer Portal at http://access.redhat.com. Through the Customer Portal, you can:
@@ -158,7 +159,7 @@ When submitting a report, be sure to mention the manual's identifier: `Deploymen
 
 If you have a suggestion for improving the documentation, try to be as specific as possible when describing it.
 If you have found an error, please include the section number and some of the surrounding text so we can find it easily.
-
+endif::cfme[]
 
 
 
