Changed one instance of 'VmWare' to 'VMware'.

--- a/api/reference/providers.adoc
+++ b/api/reference/providers.adoc
@@ -56,7 +56,7 @@ Please refer to the link:../appendices/resource_attributes.html#providers[Resour
 page for a list of available attributes when creating Providers.
 ====
 
-For example, creating a VmWare type provider:
+For example, creating a VMware type provider:
 
 ----
 POST /api/providers
