--- a/doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/cfme/master.adoc
+++ b/doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/cfme/master.adoc
@@ -1,4 +1,4 @@
-= Installing CloudForms on Red Hat Enterprise Linux OpenStack Platform
+= Installing Red Hat CloudForms on Red Hat Enterprise Linux OpenStack Platform
 :imagesdir: images
 :vernum: 4.1
 :toc: left
